# SousChefAI

./: .gitignore  README.md
agent/: .env.example  main.py  pyproject.toml  rag.py  recipe_parser.py
agent/tools/: cookbook.py  cooking.py  shopping.py  timer.py
frontend/: .env.example  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/token/: route.ts
frontend/app/api/upload/: route.ts
frontend/app/api/youtube/: route.ts
frontend/components/: bg-particle.tsx
frontend/components/cooking/: CookingView.tsx
frontend/components/landing/: HeroView.tsx  VoiceSelect.tsx
frontend/components/tools/: ShoppingList.tsx  TimerDisplay.tsx
frontend/components/ui/: hero-section.tsx
frontend/components/ui/hero/: chat-panel.tsx  cooking-view.tsx  hero-view.tsx  index.tsx  shopping-list.tsx  timer-display.tsx  types.ts  voice-active-content.tsx  voice-select-view.tsx
frontend/components/voice/: ChatPanel.tsx  TranscriptFooter.tsx  VoiceActiveContent.tsx  VoiceControlBar.tsx  VoiceControls.tsx  VoiceSession.tsx  types.ts
